--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Responsive first project</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Damion|Open+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Damion|Open+Sans|Roboto+Condensed" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="icon-font/css/Glyphter.css">
 </head>
@@ -35,7 +35,7 @@
         <a href="#"><i class="icon-details"></i> Details</a>
         <a href="#"><i class="icon-links"></i> Links</a>
         <a href="#"><i class="icon-banners"></i> Banners</a>
-        <a href="#"><i class="icon-personaldata"></i> Personal data</a>
+        <a href="form/form.html"><i class="icon-personaldata"></i> Personal data</a>
         <a href="#"><i class="icon-payout"></i> Payout</a>
         <a href="#"><i class="icon-postback"></i> Postback</a>
     </div>
@@ -46,7 +46,7 @@
             <div class="container-fluid">    
                 <div class="row calendar">
                     <div class="col-12">
-                        <form>
+                        <form class="calendar-form">
                             <div class="input-calendar col-s-6">
                                 <input type="date" class="date-calendar" id="calendar" required>
                                 <input type="date" class="date-calendar cal-right" id="calendartwo" required>
