--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
         <a href="form/form.html"><i class="icon-personaldata"></i> Personal data</a>
         <a href="#"><i class="icon-payout"></i> Payout</a>
         <a href="#"><i class="icon-postback"></i> Postback</a>
+        <hr>
+        <h4 class="title-nav">Your manager</h4>
+        <div class="overlay" id="overlay">
+            <div class="modal" id="myModal">
+              <div class="btn-close js--close-modal">x</div>
+          
+              <h4>Witaj w modalu!</h4>
+              <p>Lorem ipsum dolor sit amet...</p>
+          
+              <button class="js--close-modal">Okay</button>
+            </div>
+          </div>
+
     </div>
     <div id="main" class="main">
         <br><br><br>
