--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
         <div class="overlay" id="overlay">
             <div class="modal" id="myModal">
               <div class="btn-close js--close-modal">x</div>
-              <h4>Witaj w modalu!</h4>
-              <p>Lorem ipsum dolor sit amet...</p>
-              <button class="js--close-modal">Okay</button>
+              <h4>Hello!</h4>
+              <p>type message below...</p>
+              <textarea placeholder="message..."></textarea>
+              <button class="js--close-modal btn-lg">Okay</button>
             </div>
         </div>
     </div>
@@ -97,7 +98,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-s-12">
-                        <div class="scroll-wrapper">
+                        <div class="scroll-wrapper col-8">
                             <canvas class="chart" id="myChart"></canvas>
                         </div>
                     </div>
@@ -167,8 +168,8 @@
           </section>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-    <script script src="js/script.js" charset="UTF-8"></script>
-    <script script src="js/modal.js" charset="UTF-8"></script>
-    <script script src="js/charts.js" charset="UTF-8"></script>
+    <script src="js/script.js" charset="UTF-8"></script>
+    <script src="js/modal.js" charset="UTF-8"></script>
+    <script src="js/charts.js" charset="UTF-8"></script>
 </body>
 </html>
