--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
         <a href="#"><i class="icon-payout"></i> Payout</a>
         <a href="#"><i class="icon-postback"></i> Postback</a>
         <hr>
-        <h4 class="title-nav" id="yourManager">Your manager</h4>
+        <h4 class="title-nav">Your manager</h4>
+        <div class="img-cont" id="yourManager">
+            <img class="img-two" src="https://images.pexels.com/photos/247917/pexels-photo-247917.jpeg" alt="gross">
+            <p class="img-p">Michael P.</p>
+        </div>
         <div class="overlay" id="overlay">
             <div class="modal" id="myModal">
               <div class="btn-close js--close-modal">x</div>
@@ -56,7 +60,7 @@
             <h3 class="title">General statistic</h3>
             <div class="container-fluid">    
                 <div class="row calendar">
-                    <div class="col-12">
+                    <div class="col-12 col-m-8">
                         <form class="calendar-form">
                             <div class="input-calendar col-s-6">
                                 <input type="date" class="date-calendar" id="calendar" required>
@@ -97,8 +101,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-s-12">
-                        <div class="scroll-wrapper col-8">
+                    <div class="col-8 col-offset-2 col-m-10 col-s-12">
+                        <div class="scroll-wrapper">
                             <canvas class="chart" id="myChart"></canvas>
                         </div>
                     </div>
@@ -109,7 +113,7 @@
             <h3 class="title">Links</h3>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="button col-12"><button class="btn-lg"> + Add new</button> </div>
+                    <div class="button col-12 col-m-8 col-s-12"><button class="btn-lg"> + Add new</button> </div>
                     <div class="col-8 col-offset-2 col-m-10 col-s-12">
                         <div class="link_div top-border">
                             <div class="content_link name-one">Home page</div>
