Change in layout

--- a/form/form.html
+++ b/form/form.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <br><br><br>
-    <div id="main-form" class="main main-form">
+    <div id="main" class="main main-form">
         <section class="main-section">
             <h3 class="title">Personal data</h3>
                 <form class="first-form" action="" method="POST">
