--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <div class="btn-close js--close-modal">x</div>
               <h4>Hello!</h4>
               <p>type message below...</p>
-              <textarea placeholder="message..."></textarea>
+              <textarea class="textarea" placeholder="message..."></textarea>
               <button class="js--close-modal btn-lg">Okay</button>
             </div>
         </div>
@@ -181,3 +181,4 @@
     <script src="js/modal.js" charset="UTF-8"></script>
     <script src="js/charts.js" charset="UTF-8"></script>
 </body>
+</html>
