Changes in js, html and mediaquery

--- a/index.html
+++ b/index.html
@@ -10,23 +10,25 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <nav class="navbar">
-        <span class="open-slide" id="top-menu">
-            <a href="#">
-               <svg width="30" height="30">
-                   <path d="M0,5 30,5" stroke="#000" stroke-width="5"/>
-                   <path d="M0,14 30,14" stroke="#000" stroke-width="5"/>
-                   <path d="M0,23 30,23" stroke="#000" stroke-width="5"/>
-               </svg>
-            </a>    
-        </span>
-        <ul class="navbar-nav">
-            <li><a href="#"><i class="icon-wallet"></i> <span class="wallet"> € 1,500.00</span><i class="icon-arrow-down"></i></a></li>
-            <li><a href="#"><i class="icon-notification"></i></a></li>
-            <li><a href="#"><i class="icon-profile"></i> <span class="span-name">John Smith</span></a></li>
-            <li><a href="#"><i class="icon-quit"></i></a></li>
-        </ul>
-    </nav>
+    <div class="wrapped" id="wrapped">
+        <nav class="navbar">
+            <span class="open-slide" id="top-menu">
+                <a href="#">
+                    <svg width="30" height="30">
+                        <path d="M0,5 30,5" stroke="#000" stroke-width="5"/>
+                        <path d="M0,14 30,14" stroke="#000" stroke-width="5"/>
+                        <path d="M0,23 30,23" stroke="#000" stroke-width="5"/>
+                    </svg>
+                </a>    
+            </span>
+            <ul class="navbar-nav">
+                <li><a href="#"><i class="icon-wallet"></i> <span class="wallet"> € 1,500.00</span><i class="icon-arrow-down"></i></a></li>
+                <li><a href="#"><i class="icon-notification"></i></a></li>
+                <li><a href="#"><i class="icon-profile"></i> <span class="span-name">John Smith</span></a></li>
+                <li><a href="#"><i class="icon-quit"></i></a></li>
+            </ul>
+        </nav>
+    </div>
     <div id="side-menu" class="side-nav">
         <h1>Just do it!</h1>
         <a href="#" class="b-close">&times;</a>
